--- a/Modacity/Modacity/ViewController/Details/StatisticsView.xib
+++ b/Modacity/Modacity/ViewController/Details/StatisticsView.xib
@@ -481,8 +481,8 @@
                                             <color key="textColor" red="0.45098039220000002" green="0.42745098040000001" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utf-eP-jyu">
-                                            <rect key="frame" x="205" y="94" width="44.5" height="12"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utf-eP-jyu">
+                                            <rect key="frame" x="15" y="10" width="0.0" height="0.0"/>
                                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
                                             <color key="textColor" red="0.45098039220000002" green="0.42745098040000001" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -497,7 +497,7 @@
                                         <constraint firstAttribute="trailing" secondItem="GuV-gy-AU7" secondAttribute="trailing" constant="15" id="Tov-p5-79d"/>
                                         <constraint firstAttribute="height" constant="200" id="WK4-8b-fWH"/>
                                         <constraint firstItem="HMC-eh-z84" firstAttribute="top" secondItem="GuV-gy-AU7" secondAttribute="bottom" id="dap-6F-KPU"/>
-                                        <constraint firstItem="utf-eP-jyu" firstAttribute="top" secondItem="GuV-gy-AU7" secondAttribute="bottom" id="isP-dH-lcp"/>
+                                        <constraint firstItem="utf-eP-jyu" firstAttribute="top" secondItem="GuV-gy-AU7" secondAttribute="top" id="isP-dH-lcp"/>
                                         <constraint firstAttribute="bottom" secondItem="GuV-gy-AU7" secondAttribute="bottom" constant="20" id="lbj-ez-egC"/>
                                         <constraint firstItem="GuV-gy-AU7" firstAttribute="leading" secondItem="kNl-Nq-jnt" secondAttribute="leading" constant="15" id="qe6-Yi-pIQ"/>
                                         <constraint firstItem="HMC-eh-z84" firstAttribute="centerX" secondItem="GuV-gy-AU7" secondAttribute="trailing" id="rYh-fT-fw7"/>
