MD-155, MD-430, MD-417, MD-403, MD-443, MD-433

--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -458,8 +458,8 @@
                                                     <constraint firstItem="y4t-gg-gsi" firstAttribute="centerY" secondItem="J0v-97-ozb" secondAttribute="centerY" id="tEX-GS-Cgd"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRACTICE SESSION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXJ-sp-tTa">
-                                                <rect key="frame" x="36" y="254" width="73" height="10"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRACTICE LIST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXJ-sp-tTa">
+                                                <rect key="frame" x="36" y="254" width="55.666666666666657" height="10"/>
                                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="8"/>
                                                 <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
