--- a/Modacity/Modacity/ViewController/Reminder/reminder.storyboard
+++ b/Modacity/Modacity/ViewController/Reminder/reminder.storyboard
@@ -358,8 +358,8 @@
                                                     <action selector="onPracticeSession:" destination="kEm-gM-lKQ" eventType="touchUpInside" id="MTi-Up-Jeb"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Practice Session (Optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-D3-UvN">
-                                                <rect key="frame" x="20" y="16" width="140.33333333333334" height="15"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Practice List (Optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-D3-UvN">
+                                                <rect key="frame" x="19.999999999999993" y="16" width="119.33333333333331" height="15"/>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                                 <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
